--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: HeWenjie Blog
-SEOTitle: 何文杰的博客 | HeWenjie Blog
+title: HE's Blog
+SEOTitle: HE's Blog
 header-img: img/home-bg.jpg
 email: 326258908@qq.com
 description: ""
